# Godview

./: .gitignore  Cargo.toml  DST_IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RESEARCH_BRIEF.md  cara_sim_imp.md  carla.md  godview  hmm.md  mission.md  view_v2.md
.agent/workflows/: dst.md
.antigravity/: rules.md
.context/: blind_fitness_math.md  glossary.md  gpt.md  spatial_math.md
.github/workflows/: dst.yml
agent/: Cargo.toml  run_agent_v3.sh  sim_multi_agent.sh
agent/src/: carla_mode.rs  main.rs
carla_bridge/: emergency_priority.py  foxglove_bridge.py  godview_carla_bridge.py  latency_stress_test.py  multi_level_parking.py  requirements.txt  seeing_around_corners.py  threejs_bridge.py  zmq_bridge.py
demo/: CHATGPT_HANDOFF.md  RUNBOOK.md  compose_video.py  generate_logs.py  godview_live_demo.py  index.html  render_cameras.py  scenario_runner.py  setup_carla.sh
demo/godview_demo_30s/: README.md  build_demo.py  encode_video.py  failure_modes.md  generate_demo_logs.py  render_frames.py  requirements.txt  schema.md
demo/godview_demo_autobuild/: README.md  build_demo.py  encode_video.py  render_frames.py  requirements.txt  storyboard.md
demo/godview_demo_fix/: README.md  build_demo.py  encode_video.py
demo/godview_demo_story/: schema.md
demo/legacy/godview_demo_30s/: storyboard.md
demo/legacy/godview_demo_fix/: failure_modes.md  generate_demo_logs.py  render_frames.py  requirements.txt  schema.md  storyboard.md
demo/legacy/godview_demo_story/: README.md  failure_modes.md  generate_demo_logs.py  manual_touchdesigner_tasks.md
demo/pitch_assets/: AI_CONTEXT.md  final_consensus.txt  full_output.txt  godview_demo.cast  phase1_chaos.txt  phase2a_time.txt  phase2b_space.txt  phase2c_tracking.txt  phase2d_trust.txt  slides_content.md
demo/v2/: composer.py  overlay_renderer.py  replayer.py  scenario_runner.py
demo/v2/utils/: drawing.py  ndjson_parser.py  projection.py
docs/: ARCHITECTURE.md  CODE_LOGIC.md  IMPLEMENTATION_WALKTHROUGH.md  PROTOCOL_ANALYSIS.md  Planning Multi-Agent DST Simulation Testing.md  README.md  REAL_WORLD_SCENARIO.md  STRATEGIC_ANALYSIS.md  TECHNICAL_DOCUMENTATION.md  TRACKING_STRATEGY.md  blind_fitness.md  sensor_fusion_viz.md  v4_imp.md
docs/archive/: Fusion2.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md
docs/v0.6.0/: ARCHITECTURE.md  JOURNEY.md  RED_TEAM_REPORT.md  RELEASE.md
godview_core/: BUGS.md  Cargo.toml  Fusion1.md  README.md  build.sh  sanitycheck.md
godview_core/examples/: autonomous_demo.rs  carla_demo.rs  extended_demo.rs  godview_demo.rs  godview_showcase.rs  lidar_demo.rs  multispace_demo.rs  nuscenes_fusion_demo.rs  pitch_demo.rs  rerun_demo.rs  simple_visual_demo.rs
godview_core/src/: agent_runtime.rs  carla_zmq.rs  dashboard.rs  godview_space.rs  godview_time.rs  godview_tracking.rs  godview_trust.rs  lib.rs  metrics.rs  validation.rs  visualization.rs
godview_env/: Cargo.toml
godview_env/src/: context.rs  error.rs  lib.rs  network.rs  tokio_impl.rs  types.rs
godview_sim/: Cargo.toml  DST.md  FINAL_REPORT.md  README.md  SIM_TO_REAL.md  VULNERABILITIES.md  visualize.py
godview_sim/src/: adaptive.rs  agent.rs  context.rs  evolution.rs  exporter.rs  keys.rs  lib.rs  main.rs  network.rs  oracle.rs  runner.rs  scenarios.rs  swarm_network.rs  visualizer.rs  world.rs
scripts/: parse_nuscenes.py
scripts/setup/: install_vm.sh
