[package]
name = "godview_core"
version = "0.3.0"
edition = "2021"
authors = ["GodView Team"]
description = "High-precision distributed spatial computing protocol library"
license = "MIT"

[dependencies]
# Math & Physics (The "Time" Engine)
nalgebra = { version = "0.33", features = ["serde-serialize"] }
simba = "0.9"

# Spatial Indexing (The "Space" Engine)
h3o = { version = "0.9", features = ["geo"] }
oktree = "0.5"
geo = "0.28"

# Security (The "Trust" Engine)
biscuit-auth = "4.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
approx = "0.5"
