[package]
name = "godview_core"
version = "0.3.0"
edition = "2021"
authors = ["GodView Team"]
description = "High-precision distributed spatial computing protocol library"
license = "MIT"

[features]
default = []
visualization = ["rerun"]
kitti = ["kitti-dataset"]
dashboard = ["ratatui", "crossterm", "crossbeam"]

[dependencies]
# Math & Physics (The "Time" Engine)
nalgebra = { version = "0.33", features = ["serde-serialize"] }
simba = "0.9"

# Spatial Indexing (The "Space" Engine)
h3o = { version = "0.9", features = ["geo", "serde"] }
# oktree = "0.5"  # Temporarily disabled - requires Position trait implementation (see BUGS.md)
geo = "0.28"

# Security (The "Trust" Engine)
biscuit-auth = "4.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Visualization (Optional)
rerun = { version = "0.28", optional = true }

# KITTI Dataset Loader (Optional)
kitti-dataset = { version = "0.3", optional = true }

# TUI Dashboard (Optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
crossbeam = { version = "0.8", optional = true }


[dev-dependencies]
approx = "0.5"

[[example]]
name = "rerun_demo"
required-features = ["visualization"]

[[example]]
name = "kitti_demo"
required-features = ["visualization", "kitti"]

[[example]]
name = "nuscenes_fusion_demo"
required-features = ["visualization"]

[[example]]
name = "simple_visual_demo"
required-features = ["visualization"]

[[example]]
name = "extended_demo"
required-features = ["visualization"]
